// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Story Snapshots: Content should match snapshot 1`] = `
[
  <ExternalKeyboardView
    canBeFocused={true}
    enableA11yFocus={false}
    enableContextMenu={false}
    group={false}
    haloEffect={true}
    hasKeyDownPress={false}
    hasKeyUpPress={true}
    hasOnFocusChanged={true}
    lockFocus={0}
    onContextMenuPress={[Function]}
    onFocusChange={[Function]}
    onKeyUpPress={[Function]}
    orderIndex={-1}
    screenAutoA11yFocusDelay={300}
    style={
      [
        undefined,
        undefined,
      ]
    }
  >
    <RNGestureHandlerButton
      accessibilityRole="radio"
      activeOpacity={1}
      collapsable={false}
      delayLongPress={600}
      enabled={true}
      handlerTag={-1}
      handlerType="NativeViewGestureHandler"
      innerRef={null}
      onActiveStateChange={[Function]}
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      onPress={[Function]}
      rippleColor="#EAE1CB"
      style={
        [
          {
            "backgroundColor": "#FFFDF6",
            "borderRadius": undefined,
            "margin": undefined,
            "marginBottom": undefined,
            "marginEnd": undefined,
            "marginHorizontal": undefined,
            "marginLeft": undefined,
            "marginRight": undefined,
            "marginStart": undefined,
            "marginTop": undefined,
            "marginVertical": undefined,
          },
          {
            "cursor": undefined,
          },
        ]
      }
      testID="server-item-https://open.rocket.chat/"
      underlayColor="#EAE1CB"
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#EAE1CB",
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderRadius": undefined,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "bottom": 0,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <View
        accessibilityHint="Activate to select server"
        accessibilityLabel="Rocket.Chat. https://open.rocket.chat/. Selected"
        accessibilityRole="radio"
        accessible={true}
        style={{}}
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "row",
                "padding": 12,
              },
              {
                "height": 68,
              },
            ]
          }
        >
          <ViewManagerAdapter_ExpoImage
            borderRadius={4}
            containerViewRef={{"current":"Object"}}
            contentFit="contain"
            contentPosition={
              {
                "left": "50%",
                "top": "50%",
              }
            }
            height={44}
            nativeViewRef={{"current":"NativeComponent"}}
            onError={[Function]}
            onLoad={[Function]}
            onLoadStart={[Function]}
            onProgress={[Function]}
            placeholder={
              [
                {
                  "uri": "test-file-stub",
                },
              ]
            }
            source={
              [
                {
                  "uri": "https://open.rocket.chat/images/logo/android-chrome-512x512.png",
                },
              ]
            }
            style={
              {
                "borderRadius": 4,
                "height": 44,
                "width": 44,
              }
            }
            transition={null}
            width={44}
          />
          <View
            style={
              {
                "flex": 1,
                "flexDirection": "column",
                "justifyContent": "center",
                "paddingLeft": 12,
                "paddingRight": 18,
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "fontFamily": "Inter",
                    "fontSize": 18,
                    "fontWeight": "600",
                    "textAlign": "left",
                  },
                  {
                    "color": "#2C2A21",
                  },
                ]
              }
            >
              Rocket.Chat
            </Text>
            <Text
              numberOfLines={1}
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "fontFamily": "Inter",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "textAlign": "left",
                  },
                  {
                    "color": "#6B675A",
                  },
                ]
              }
            >
              https://open.rocket.chat/
            </Text>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "justifyContent": "center",
                },
                undefined,
              ]
            }
          >
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                [
                  {
                    "color": "#175F35",
                    "fontSize": 24,
                  },
                  [
                    {
                      "lineHeight": 24,
                    },
                    undefined,
                  ],
                  {
                    "fontFamily": "custom",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
    </RNGestureHandlerButton>
  </ExternalKeyboardView>,
  <ExternalKeyboardView
    canBeFocused={true}
    enableA11yFocus={false}
    enableContextMenu={false}
    group={false}
    haloEffect={true}
    hasKeyDownPress={false}
    hasKeyUpPress={true}
    hasOnFocusChanged={true}
    lockFocus={0}
    onContextMenuPress={[Function]}
    onFocusChange={[Function]}
    onKeyUpPress={[Function]}
    orderIndex={-1}
    screenAutoA11yFocusDelay={300}
    style={
      [
        undefined,
        undefined,
      ]
    }
  >
    <RNGestureHandlerButton
      accessibilityRole="radio"
      activeOpacity={1}
      collapsable={false}
      delayLongPress={600}
      enabled={true}
      handlerTag={-1}
      handlerType="NativeViewGestureHandler"
      innerRef={null}
      onActiveStateChange={[Function]}
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      onPress={[Function]}
      rippleColor="#EAE1CB"
      style={
        [
          {
            "backgroundColor": "#FFFDF6",
            "borderRadius": undefined,
            "margin": undefined,
            "marginBottom": undefined,
            "marginEnd": undefined,
            "marginHorizontal": undefined,
            "marginLeft": undefined,
            "marginRight": undefined,
            "marginStart": undefined,
            "marginTop": undefined,
            "marginVertical": undefined,
          },
          {
            "cursor": undefined,
          },
        ]
      }
      testID="server-item-https://superlongservername.tologintoasuperlongservername/"
      underlayColor="#EAE1CB"
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#EAE1CB",
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderRadius": undefined,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "bottom": 0,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <View
        accessibilityHint="Activate to select server"
        accessibilityLabel="Super Long Server Name in Rocket.Chat. https://superlongservername.tologintoasuperlongservername/. Unselected"
        accessibilityRole="radio"
        accessible={true}
        style={{}}
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "row",
                "padding": 12,
              },
              {
                "height": 68,
              },
            ]
          }
        >
          <ViewManagerAdapter_ExpoImage
            borderRadius={4}
            containerViewRef={{"current":"Object"}}
            contentFit="contain"
            contentPosition={
              {
                "left": "50%",
                "top": "50%",
              }
            }
            height={44}
            nativeViewRef={{"current":"NativeComponent"}}
            onError={[Function]}
            onLoad={[Function]}
            onLoadStart={[Function]}
            onProgress={[Function]}
            placeholder={
              [
                {
                  "uri": "test-file-stub",
                },
              ]
            }
            source={
              [
                {
                  "uri": "https://open.rocket.chat/images/logo/android-chrome-512x512.png",
                },
              ]
            }
            style={
              {
                "borderRadius": 4,
                "height": 44,
                "width": 44,
              }
            }
            transition={null}
            width={44}
          />
          <View
            style={
              {
                "flex": 1,
                "flexDirection": "column",
                "justifyContent": "center",
                "paddingLeft": 12,
                "paddingRight": 18,
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "fontFamily": "Inter",
                    "fontSize": 18,
                    "fontWeight": "600",
                    "textAlign": "left",
                  },
                  {
                    "color": "#2C2A21",
                  },
                ]
              }
            >
              Super Long Server Name in Rocket.Chat
            </Text>
            <Text
              numberOfLines={1}
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "fontFamily": "Inter",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "textAlign": "left",
                  },
                  {
                    "color": "#6B675A",
                  },
                ]
              }
            >
              https://superlongservername.tologintoasuperlongservername/
            </Text>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "justifyContent": "center",
                },
                undefined,
              ]
            }
          >
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                [
                  {
                    "color": "#C9C2AC",
                    "fontSize": 24,
                  },
                  [
                    {
                      "lineHeight": 24,
                    },
                    undefined,
                  ],
                  {
                    "fontFamily": "custom",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
    </RNGestureHandlerButton>
  </ExternalKeyboardView>,
  <ExternalKeyboardView
    canBeFocused={true}
    enableA11yFocus={false}
    enableContextMenu={false}
    group={false}
    haloEffect={true}
    hasKeyDownPress={false}
    hasKeyUpPress={true}
    hasOnFocusChanged={true}
    lockFocus={0}
    onContextMenuPress={[Function]}
    onFocusChange={[Function]}
    onKeyUpPress={[Function]}
    orderIndex={-1}
    screenAutoA11yFocusDelay={300}
    style={
      [
        undefined,
        undefined,
      ]
    }
  >
    <RNGestureHandlerButton
      accessibilityRole="radio"
      activeOpacity={1}
      collapsable={false}
      delayLongPress={600}
      enabled={true}
      handlerTag={-1}
      handlerType="NativeViewGestureHandler"
      innerRef={null}
      onActiveStateChange={[Function]}
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      onPress={[Function]}
      rippleColor="#EAE1CB"
      style={
        [
          {
            "backgroundColor": "#FFFDF6",
            "borderRadius": undefined,
            "margin": undefined,
            "marginBottom": undefined,
            "marginEnd": undefined,
            "marginHorizontal": undefined,
            "marginLeft": undefined,
            "marginRight": undefined,
            "marginStart": undefined,
            "marginTop": undefined,
            "marginVertical": undefined,
          },
          {
            "cursor": undefined,
          },
        ]
      }
      testID="server-item-https://stable.rocket.chat/"
      underlayColor="#EAE1CB"
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#EAE1CB",
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderRadius": undefined,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "bottom": 0,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <View
        accessibilityHint="Activate to select server"
        accessibilityLabel="Rocket.Chat. https://stable.rocket.chat/. Unselected"
        accessibilityRole="radio"
        accessible={true}
        style={{}}
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "row",
                "padding": 12,
              },
              {
                "height": 68,
              },
            ]
          }
        >
          <ViewManagerAdapter_ExpoImage
            borderRadius={4}
            containerViewRef={{"current":"Object"}}
            contentFit="contain"
            contentPosition={
              {
                "left": "50%",
                "top": "50%",
              }
            }
            height={44}
            nativeViewRef={{"current":"NativeComponent"}}
            onError={[Function]}
            onLoad={[Function]}
            onLoadStart={[Function]}
            onProgress={[Function]}
            placeholder={
              [
                {
                  "uri": "test-file-stub",
                },
              ]
            }
            source={
              [
                {
                  "uri": "https://open.rocket.chat/images/logo/android-chrome-512x512.png",
                },
              ]
            }
            style={
              {
                "borderRadius": 4,
                "height": 44,
                "width": 44,
              }
            }
            transition={null}
            width={44}
          />
          <View
            style={
              {
                "flex": 1,
                "flexDirection": "column",
                "justifyContent": "center",
                "paddingLeft": 12,
                "paddingRight": 18,
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "fontFamily": "Inter",
                    "fontSize": 18,
                    "fontWeight": "600",
                    "textAlign": "left",
                  },
                  {
                    "color": "#2C2A21",
                  },
                ]
              }
            >
              Rocket.Chat
            </Text>
            <Text
              numberOfLines={1}
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "fontFamily": "Inter",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "textAlign": "left",
                  },
                  {
                    "color": "#6B675A",
                  },
                ]
              }
            >
              https://stable.rocket.chat/
            </Text>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "justifyContent": "center",
                },
                undefined,
              ]
            }
          >
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                [
                  {
                    "color": "#C9C2AC",
                    "fontSize": 24,
                  },
                  [
                    {
                      "lineHeight": 24,
                    },
                    undefined,
                  ],
                  {
                    "fontFamily": "custom",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
    </RNGestureHandlerButton>
  </ExternalKeyboardView>,
]
`;

exports[`Story Snapshots: SwipeActions should match snapshot 1`] = `
[
  <View
    collapsable={false}
  >
    <View
      pointerEvents="box-none"
      style={
        [
          {
            "flexDirection": "row",
            "left": 0,
            "position": "absolute",
            "right": 0,
          },
          {
            "height": 80,
          },
          {
            "backgroundColor": "#B3402E",
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "flex-end",
              "justifyContent": "center",
              "position": "absolute",
              "top": 0,
            },
            {
              "width": 390,
            },
            {
              "height": 80,
            },
            [Function],
          ]
        }
      >
        <RNGestureHandlerButton
          accessibilityLabel="Delete"
          accessible={true}
          activeOpacity={0.105}
          collapsable={false}
          delayLongPress={600}
          handlerTag={-1}
          handlerType="NativeViewGestureHandler"
          innerRef={null}
          onActiveStateChange={[Function]}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          onPress={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "#B3402E",
                "height": "100%",
                "justifyContent": "center",
                "width": 80,
              },
              {
                "cursor": undefined,
              },
            ]
          }
          testID="server-item-https://open.rocket.chat/-delete"
          underlayColor="black"
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "black",
                "borderBottomLeftRadius": undefined,
                "borderBottomRightRadius": undefined,
                "borderRadius": undefined,
                "borderTopLeftRadius": undefined,
                "borderTopRightRadius": undefined,
                "bottom": 0,
                "left": 0,
                "opacity": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#FFFFFF",
                  "fontSize": 24,
                },
                [
                  {
                    "lineHeight": 24,
                  },
                  undefined,
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
        </RNGestureHandlerButton>
      </View>
    </View>
    <View
      style={[Function]}
    >
      <ExternalKeyboardView
        canBeFocused={true}
        enableA11yFocus={false}
        enableContextMenu={false}
        group={false}
        haloEffect={true}
        hasKeyDownPress={false}
        hasKeyUpPress={true}
        hasOnFocusChanged={true}
        lockFocus={0}
        onContextMenuPress={[Function]}
        onFocusChange={[Function]}
        onKeyUpPress={[Function]}
        orderIndex={-1}
        screenAutoA11yFocusDelay={300}
        style={
          [
            undefined,
            undefined,
          ]
        }
      >
        <RNGestureHandlerButton
          activeOpacity={1}
          collapsable={false}
          delayLongPress={600}
          enabled={true}
          handlerTag={-1}
          handlerType="NativeViewGestureHandler"
          innerRef={null}
          onActiveStateChange={[Function]}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          onPress={[Function]}
          rippleColor="#EAE1CB"
          style={
            [
              {
                "backgroundColor": "#FFFDF6",
                "borderRadius": undefined,
                "margin": undefined,
                "marginBottom": undefined,
                "marginEnd": undefined,
                "marginHorizontal": undefined,
                "marginLeft": undefined,
                "marginRight": undefined,
                "marginStart": undefined,
                "marginTop": undefined,
                "marginVertical": undefined,
              },
              {
                "cursor": undefined,
              },
            ]
          }
          testID="server-item-https://open.rocket.chat/"
          underlayColor="#EAE1CB"
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "#EAE1CB",
                "borderBottomLeftRadius": undefined,
                "borderBottomRightRadius": undefined,
                "borderRadius": undefined,
                "borderTopLeftRadius": undefined,
                "borderTopRightRadius": undefined,
                "bottom": 0,
                "left": 0,
                "opacity": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <View
            accessibilityActions={
              [
                {
                  "label": "Delete",
                  "name": "delete",
                },
              ]
            }
            accessibilityHint="Activate to select server. Available actions: delete"
            accessibilityLabel="Rocket.Chat. https://open.rocket.chat/. Unselected"
            accessible={true}
            onAccessibilityAction={[Function]}
            style={{}}
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "padding": 12,
                  },
                  {
                    "height": 68,
                  },
                ]
              }
            >
              <ViewManagerAdapter_ExpoImage
                borderRadius={4}
                containerViewRef={{"current":"Object"}}
                contentFit="contain"
                contentPosition={
                  {
                    "left": "50%",
                    "top": "50%",
                  }
                }
                height={44}
                nativeViewRef={{"current":"NativeComponent"}}
                onError={[Function]}
                onLoad={[Function]}
                onLoadStart={[Function]}
                onProgress={[Function]}
                placeholder={
                  [
                    {
                      "uri": "test-file-stub",
                    },
                  ]
                }
                source={
                  [
                    {
                      "uri": "https://open.rocket.chat/images/logo/android-chrome-512x512.png",
                    },
                  ]
                }
                style={
                  {
                    "borderRadius": 4,
                    "height": 44,
                    "width": 44,
                  }
                }
                transition={null}
                width={44}
              />
              <View
                style={
                  {
                    "flex": 1,
                    "flexDirection": "column",
                    "justifyContent": "center",
                    "paddingLeft": 12,
                    "paddingRight": 18,
                  }
                }
              >
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                        "fontFamily": "Inter",
                        "fontSize": 18,
                        "fontWeight": "600",
                        "textAlign": "left",
                      },
                      {
                        "color": "#2C2A21",
                      },
                    ]
                  }
                >
                  Rocket.Chat
                </Text>
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                        "fontFamily": "Inter",
                        "fontSize": 16,
                        "fontWeight": "400",
                        "textAlign": "left",
                      },
                      {
                        "color": "#6B675A",
                      },
                    ]
                  }
                >
                  https://open.rocket.chat/
                </Text>
              </View>
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    undefined,
                  ]
                }
              >
                <Text
                  allowFontScaling={false}
                  selectable={false}
                  style={
                    [
                      {
                        "color": "#C9C2AC",
                        "fontSize": 24,
                      },
                      [
                        {
                          "lineHeight": 24,
                        },
                        undefined,
                      ],
                      {
                        "fontFamily": "custom",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      {},
                    ]
                  }
                >
                  
                </Text>
              </View>
            </View>
          </View>
        </RNGestureHandlerButton>
      </ExternalKeyboardView>
    </View>
  </View>,
  <View
    collapsable={false}
  >
    <View
      pointerEvents="box-none"
      style={
        [
          {
            "flexDirection": "row",
            "left": 0,
            "position": "absolute",
            "right": 0,
          },
          {
            "height": 80,
          },
          {
            "backgroundColor": "#B3402E",
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "alignItems": "flex-end",
              "justifyContent": "center",
              "position": "absolute",
              "top": 0,
            },
            {
              "width": 390,
            },
            {
              "height": 80,
            },
            [Function],
          ]
        }
      >
        <RNGestureHandlerButton
          accessibilityLabel="Delete"
          accessible={true}
          activeOpacity={0.105}
          collapsable={false}
          delayLongPress={600}
          handlerTag={-1}
          handlerType="NativeViewGestureHandler"
          innerRef={null}
          onActiveStateChange={[Function]}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          onPress={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "#B3402E",
                "height": "100%",
                "justifyContent": "center",
                "width": 80,
              },
              {
                "cursor": undefined,
              },
            ]
          }
          testID="server-item-https://example.com/-delete"
          underlayColor="black"
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "black",
                "borderBottomLeftRadius": undefined,
                "borderBottomRightRadius": undefined,
                "borderRadius": undefined,
                "borderTopLeftRadius": undefined,
                "borderTopRightRadius": undefined,
                "bottom": 0,
                "left": 0,
                "opacity": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#FFFFFF",
                  "fontSize": 24,
                },
                [
                  {
                    "lineHeight": 24,
                  },
                  undefined,
                ],
                {
                  "fontFamily": "custom",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
        </RNGestureHandlerButton>
      </View>
    </View>
    <View
      style={[Function]}
    >
      <ExternalKeyboardView
        canBeFocused={true}
        enableA11yFocus={false}
        enableContextMenu={false}
        group={false}
        haloEffect={true}
        hasKeyDownPress={false}
        hasKeyUpPress={true}
        hasOnFocusChanged={true}
        lockFocus={0}
        onContextMenuPress={[Function]}
        onFocusChange={[Function]}
        onKeyUpPress={[Function]}
        orderIndex={-1}
        screenAutoA11yFocusDelay={300}
        style={
          [
            undefined,
            undefined,
          ]
        }
      >
        <RNGestureHandlerButton
          activeOpacity={1}
          collapsable={false}
          delayLongPress={600}
          enabled={true}
          handlerTag={-1}
          handlerType="NativeViewGestureHandler"
          innerRef={null}
          onActiveStateChange={[Function]}
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          onPress={[Function]}
          rippleColor="#EAE1CB"
          style={
            [
              {
                "backgroundColor": "#FFFDF6",
                "borderRadius": undefined,
                "margin": undefined,
                "marginBottom": undefined,
                "marginEnd": undefined,
                "marginHorizontal": undefined,
                "marginLeft": undefined,
                "marginRight": undefined,
                "marginStart": undefined,
                "marginTop": undefined,
                "marginVertical": undefined,
              },
              {
                "cursor": undefined,
              },
            ]
          }
          testID="server-item-https://example.com/"
          underlayColor="#EAE1CB"
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "#EAE1CB",
                "borderBottomLeftRadius": undefined,
                "borderBottomRightRadius": undefined,
                "borderRadius": undefined,
                "borderTopLeftRadius": undefined,
                "borderTopRightRadius": undefined,
                "bottom": 0,
                "left": 0,
                "opacity": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
          <View
            accessibilityActions={
              [
                {
                  "label": "Delete",
                  "name": "delete",
                },
              ]
            }
            accessibilityHint="Activate to select server. Available actions: delete"
            accessibilityLabel="Another Server. https://example.com/. Unselected"
            accessible={true}
            onAccessibilityAction={[Function]}
            style={{}}
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "padding": 12,
                  },
                  {
                    "height": 68,
                  },
                ]
              }
            >
              <ViewManagerAdapter_ExpoImage
                borderRadius={4}
                containerViewRef={{"current":"Object"}}
                contentFit="contain"
                contentPosition={
                  {
                    "left": "50%",
                    "top": "50%",
                  }
                }
                height={44}
                nativeViewRef={{"current":"NativeComponent"}}
                onError={[Function]}
                onLoad={[Function]}
                onLoadStart={[Function]}
                onProgress={[Function]}
                placeholder={
                  [
                    {
                      "uri": "test-file-stub",
                    },
                  ]
                }
                source={
                  [
                    {
                      "uri": "https://open.rocket.chat/images/logo/android-chrome-512x512.png",
                    },
                  ]
                }
                style={
                  {
                    "borderRadius": 4,
                    "height": 44,
                    "width": 44,
                  }
                }
                transition={null}
                width={44}
              />
              <View
                style={
                  {
                    "flex": 1,
                    "flexDirection": "column",
                    "justifyContent": "center",
                    "paddingLeft": 12,
                    "paddingRight": 18,
                  }
                }
              >
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                        "fontFamily": "Inter",
                        "fontSize": 18,
                        "fontWeight": "600",
                        "textAlign": "left",
                      },
                      {
                        "color": "#2C2A21",
                      },
                    ]
                  }
                >
                  Another Server
                </Text>
                <Text
                  numberOfLines={1}
                  style={
                    [
                      {
                        "backgroundColor": "transparent",
                        "fontFamily": "Inter",
                        "fontSize": 16,
                        "fontWeight": "400",
                        "textAlign": "left",
                      },
                      {
                        "color": "#6B675A",
                      },
                    ]
                  }
                >
                  https://example.com/
                </Text>
              </View>
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    undefined,
                  ]
                }
              >
                <Text
                  allowFontScaling={false}
                  selectable={false}
                  style={
                    [
                      {
                        "color": "#C9C2AC",
                        "fontSize": 24,
                      },
                      [
                        {
                          "lineHeight": 24,
                        },
                        undefined,
                      ],
                      {
                        "fontFamily": "custom",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      {},
                    ]
                  }
                >
                  
                </Text>
              </View>
            </View>
          </View>
        </RNGestureHandlerButton>
      </ExternalKeyboardView>
    </View>
  </View>,
]
`;

exports[`Story Snapshots: Themes should match snapshot 1`] = `
[
  <ExternalKeyboardView
    canBeFocused={true}
    enableA11yFocus={false}
    enableContextMenu={false}
    group={false}
    haloEffect={true}
    hasKeyDownPress={false}
    hasKeyUpPress={true}
    hasOnFocusChanged={true}
    lockFocus={0}
    onContextMenuPress={[Function]}
    onFocusChange={[Function]}
    onKeyUpPress={[Function]}
    orderIndex={-1}
    screenAutoA11yFocusDelay={300}
    style={
      [
        undefined,
        undefined,
      ]
    }
  >
    <RNGestureHandlerButton
      accessibilityRole="radio"
      activeOpacity={1}
      collapsable={false}
      delayLongPress={600}
      enabled={true}
      handlerTag={-1}
      handlerType="NativeViewGestureHandler"
      innerRef={null}
      onActiveStateChange={[Function]}
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      onPress={[Function]}
      rippleColor="#EAE1CB"
      style={
        [
          {
            "backgroundColor": "#FFFDF6",
            "borderRadius": undefined,
            "margin": undefined,
            "marginBottom": undefined,
            "marginEnd": undefined,
            "marginHorizontal": undefined,
            "marginLeft": undefined,
            "marginRight": undefined,
            "marginStart": undefined,
            "marginTop": undefined,
            "marginVertical": undefined,
          },
          {
            "cursor": undefined,
          },
        ]
      }
      testID="server-item-https://open.rocket.chat/"
      underlayColor="#EAE1CB"
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#EAE1CB",
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderRadius": undefined,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "bottom": 0,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <View
        accessibilityHint="Activate to select server"
        accessibilityLabel="Rocket.Chat. https://open.rocket.chat/. Unselected"
        accessibilityRole="radio"
        accessible={true}
        style={{}}
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "row",
                "padding": 12,
              },
              {
                "height": 68,
              },
            ]
          }
        >
          <ViewManagerAdapter_ExpoImage
            borderRadius={4}
            containerViewRef={{"current":"Object"}}
            contentFit="contain"
            contentPosition={
              {
                "left": "50%",
                "top": "50%",
              }
            }
            height={44}
            nativeViewRef={{"current":"NativeComponent"}}
            onError={[Function]}
            onLoad={[Function]}
            onLoadStart={[Function]}
            onProgress={[Function]}
            placeholder={
              [
                {
                  "uri": "test-file-stub",
                },
              ]
            }
            source={
              [
                {
                  "uri": "https://open.rocket.chat/images/logo/android-chrome-512x512.png",
                },
              ]
            }
            style={
              {
                "borderRadius": 4,
                "height": 44,
                "width": 44,
              }
            }
            transition={null}
            width={44}
          />
          <View
            style={
              {
                "flex": 1,
                "flexDirection": "column",
                "justifyContent": "center",
                "paddingLeft": 12,
                "paddingRight": 18,
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "fontFamily": "Inter",
                    "fontSize": 18,
                    "fontWeight": "600",
                    "textAlign": "left",
                  },
                  {
                    "color": "#2C2A21",
                  },
                ]
              }
            >
              Rocket.Chat
            </Text>
            <Text
              numberOfLines={1}
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "fontFamily": "Inter",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "textAlign": "left",
                  },
                  {
                    "color": "#6B675A",
                  },
                ]
              }
            >
              https://open.rocket.chat/
            </Text>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "justifyContent": "center",
                },
                undefined,
              ]
            }
          >
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                [
                  {
                    "color": "#C9C2AC",
                    "fontSize": 24,
                  },
                  [
                    {
                      "lineHeight": 24,
                    },
                    undefined,
                  ],
                  {
                    "fontFamily": "custom",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
    </RNGestureHandlerButton>
  </ExternalKeyboardView>,
  <ExternalKeyboardView
    canBeFocused={true}
    enableA11yFocus={false}
    enableContextMenu={false}
    group={false}
    haloEffect={true}
    hasKeyDownPress={false}
    hasKeyUpPress={true}
    hasOnFocusChanged={true}
    lockFocus={0}
    onContextMenuPress={[Function]}
    onFocusChange={[Function]}
    onKeyUpPress={[Function]}
    orderIndex={-1}
    screenAutoA11yFocusDelay={300}
    style={
      [
        undefined,
        undefined,
      ]
    }
  >
    <RNGestureHandlerButton
      accessibilityRole="radio"
      activeOpacity={1}
      collapsable={false}
      delayLongPress={600}
      enabled={true}
      handlerTag={-1}
      handlerType="NativeViewGestureHandler"
      innerRef={null}
      onActiveStateChange={[Function]}
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      onPress={[Function]}
      rippleColor="#12402C"
      style={
        [
          {
            "backgroundColor": "#0A2417",
            "borderRadius": undefined,
            "margin": undefined,
            "marginBottom": undefined,
            "marginEnd": undefined,
            "marginHorizontal": undefined,
            "marginLeft": undefined,
            "marginRight": undefined,
            "marginStart": undefined,
            "marginTop": undefined,
            "marginVertical": undefined,
          },
          {
            "cursor": undefined,
          },
        ]
      }
      testID="server-item-https://open.rocket.chat/"
      underlayColor="#12402C"
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#12402C",
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderRadius": undefined,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "bottom": 0,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <View
        accessibilityHint="Activate to select server"
        accessibilityLabel="Rocket.Chat. https://open.rocket.chat/. Unselected"
        accessibilityRole="radio"
        accessible={true}
        style={{}}
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "row",
                "padding": 12,
              },
              {
                "height": 68,
              },
            ]
          }
        >
          <ViewManagerAdapter_ExpoImage
            borderRadius={4}
            containerViewRef={{"current":"Object"}}
            contentFit="contain"
            contentPosition={
              {
                "left": "50%",
                "top": "50%",
              }
            }
            height={44}
            nativeViewRef={{"current":"NativeComponent"}}
            onError={[Function]}
            onLoad={[Function]}
            onLoadStart={[Function]}
            onProgress={[Function]}
            placeholder={
              [
                {
                  "uri": "test-file-stub",
                },
              ]
            }
            source={
              [
                {
                  "uri": "https://open.rocket.chat/images/logo/android-chrome-512x512.png",
                },
              ]
            }
            style={
              {
                "borderRadius": 4,
                "height": 44,
                "width": 44,
              }
            }
            transition={null}
            width={44}
          />
          <View
            style={
              {
                "flex": 1,
                "flexDirection": "column",
                "justifyContent": "center",
                "paddingLeft": 12,
                "paddingRight": 18,
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "fontFamily": "Inter",
                    "fontSize": 18,
                    "fontWeight": "600",
                    "textAlign": "left",
                  },
                  {
                    "color": "#F4FFF9",
                  },
                ]
              }
            >
              Rocket.Chat
            </Text>
            <Text
              numberOfLines={1}
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "fontFamily": "Inter",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "textAlign": "left",
                  },
                  {
                    "color": "#8FD9B8",
                  },
                ]
              }
            >
              https://open.rocket.chat/
            </Text>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "justifyContent": "center",
                },
                undefined,
              ]
            }
          >
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                [
                  {
                    "color": "#2E6A4C",
                    "fontSize": 24,
                  },
                  [
                    {
                      "lineHeight": 24,
                    },
                    undefined,
                  ],
                  {
                    "fontFamily": "custom",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
    </RNGestureHandlerButton>
  </ExternalKeyboardView>,
  <ExternalKeyboardView
    canBeFocused={true}
    enableA11yFocus={false}
    enableContextMenu={false}
    group={false}
    haloEffect={true}
    hasKeyDownPress={false}
    hasKeyUpPress={true}
    hasOnFocusChanged={true}
    lockFocus={0}
    onContextMenuPress={[Function]}
    onFocusChange={[Function]}
    onKeyUpPress={[Function]}
    orderIndex={-1}
    screenAutoA11yFocusDelay={300}
    style={
      [
        undefined,
        undefined,
      ]
    }
  >
    <RNGestureHandlerButton
      accessibilityRole="radio"
      activeOpacity={1}
      collapsable={false}
      delayLongPress={600}
      enabled={true}
      handlerTag={-1}
      handlerType="NativeViewGestureHandler"
      innerRef={null}
      onActiveStateChange={[Function]}
      onGestureHandlerEvent={[Function]}
      onGestureHandlerStateChange={[Function]}
      onPress={[Function]}
      rippleColor="#0A2417"
      style={
        [
          {
            "backgroundColor": "#030C07",
            "borderRadius": undefined,
            "margin": undefined,
            "marginBottom": undefined,
            "marginEnd": undefined,
            "marginHorizontal": undefined,
            "marginLeft": undefined,
            "marginRight": undefined,
            "marginStart": undefined,
            "marginTop": undefined,
            "marginVertical": undefined,
          },
          {
            "cursor": undefined,
          },
        ]
      }
      testID="server-item-https://open.rocket.chat/"
      underlayColor="#0A2417"
    >
      <View
        collapsable={false}
        style={
          {
            "backgroundColor": "#0A2417",
            "borderBottomLeftRadius": undefined,
            "borderBottomRightRadius": undefined,
            "borderRadius": undefined,
            "borderTopLeftRadius": undefined,
            "borderTopRightRadius": undefined,
            "bottom": 0,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <View
        accessibilityHint="Activate to select server"
        accessibilityLabel="Rocket.Chat. https://open.rocket.chat/. Unselected"
        accessibilityRole="radio"
        accessible={true}
        style={{}}
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "row",
                "padding": 12,
              },
              {
                "height": 68,
              },
            ]
          }
        >
          <ViewManagerAdapter_ExpoImage
            borderRadius={4}
            containerViewRef={{"current":"Object"}}
            contentFit="contain"
            contentPosition={
              {
                "left": "50%",
                "top": "50%",
              }
            }
            height={44}
            nativeViewRef={{"current":"NativeComponent"}}
            onError={[Function]}
            onLoad={[Function]}
            onLoadStart={[Function]}
            onProgress={[Function]}
            placeholder={
              [
                {
                  "uri": "test-file-stub",
                },
              ]
            }
            source={
              [
                {
                  "uri": "https://open.rocket.chat/images/logo/android-chrome-512x512.png",
                },
              ]
            }
            style={
              {
                "borderRadius": 4,
                "height": 44,
                "width": 44,
              }
            }
            transition={null}
            width={44}
          />
          <View
            style={
              {
                "flex": 1,
                "flexDirection": "column",
                "justifyContent": "center",
                "paddingLeft": 12,
                "paddingRight": 18,
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "fontFamily": "Inter",
                    "fontSize": 18,
                    "fontWeight": "600",
                    "textAlign": "left",
                  },
                  {
                    "color": "#F4FFF9",
                  },
                ]
              }
            >
              Rocket.Chat
            </Text>
            <Text
              numberOfLines={1}
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "fontFamily": "Inter",
                    "fontSize": 16,
                    "fontWeight": "400",
                    "textAlign": "left",
                  },
                  {
                    "color": "#8FD9B8",
                  },
                ]
              }
            >
              https://open.rocket.chat/
            </Text>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "justifyContent": "center",
                },
                undefined,
              ]
            }
          >
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                [
                  {
                    "color": "#25553C",
                    "fontSize": 24,
                  },
                  [
                    {
                      "lineHeight": 24,
                    },
                    undefined,
                  ],
                  {
                    "fontFamily": "custom",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
    </RNGestureHandlerButton>
  </ExternalKeyboardView>,
]
`;
